[workspace]

[package]
name = "ac-library-rs-parted"
version = "0.1.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
description = "Partitioned ac-library-rs."
license = "CC0-1.0"
repository = "https://github.com/qryxip/ac-library-rs-parted"
keywords = ["competitive"]
categories = ["algorithms", "data-structures"]
publish = false

[lib]
name = "ac_library_rs"

[dependencies]
__acl_convolution = { package = "ac-library-rs-parted-convolution", version = "0.1.0", path = "./ac-library-rs-parted-convolution" }
__acl_dsu         = { package = "ac-library-rs-parted-dsu"        , version = "0.1.0", path = "./ac-library-rs-parted-dsu"         }
__acl_fenwicktree = { package = "ac-library-rs-parted-fenwicktree", version = "0.1.0", path = "./ac-library-rs-parted-fenwicktree" }
__acl_lazysegtree = { package = "ac-library-rs-parted-lazysegtree", version = "0.1.0", path = "./ac-library-rs-parted-lazysegtree" }
__acl_math        = { package = "ac-library-rs-parted-math"       , version = "0.1.0", path = "./ac-library-rs-parted-math"        }
__acl_maxflow     = { package = "ac-library-rs-parted-maxflow"    , version = "0.1.0", path = "./ac-library-rs-parted-maxflow"     }
__acl_mincostflow = { package = "ac-library-rs-parted-mincostflow", version = "0.1.0", path = "./ac-library-rs-parted-mincostflow" }
__acl_modint      = { package = "ac-library-rs-parted-modint"     , version = "0.1.0", path = "./ac-library-rs-parted-modint"      }
__acl_scc         = { package = "ac-library-rs-parted-scc"        , version = "0.1.0", path = "./ac-library-rs-parted-scc"         }
__acl_segtree     = { package = "ac-library-rs-parted-segtree"    , version = "0.1.0", path = "./ac-library-rs-parted-segtree"     }
__acl_string      = { package = "ac-library-rs-parted-string"     , version = "0.1.0", path = "./ac-library-rs-parted-string"      }
__acl_twosat      = { package = "ac-library-rs-parted-twosat"     , version = "0.1.0", path = "./ac-library-rs-parted-twosat"      }

[build-dependencies]
ac-library-rs-parted-build = { version = "0.1.0", path = "./ac-library-rs-parted-build" }
