[package]
name = "ac-library-rs-parted-mincostflow"
version = "0.1.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
description = "Partitioned ac-library-rs."
license = "CC0-1.0"
repository = "https://github.com/qryxip/ac-library-rs-parted"
keywords = ["competitive"]
categories = ["algorithms", "data-structures"]
publish = false

[lib]
name = "acl_mincostflow"

[dependencies]
__acl_internal_scc = { package = "ac-library-rs-parted-internal-scc", version = "0.1.0", path = "../ac-library-rs-parted-internal-scc" }
__acl_internal_type_traits = { package = "ac-library-rs-parted-internal-type-traits", version = "0.1.0", path = "../ac-library-rs-parted-internal-type-traits" }
