[package]
name = "ac-library-rs-parted-scc"
version = "0.1.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
description = "Partitioned ac-library-rs."
license = "CC0-1.0"
repository = "https://github.com/qryxip/ac-library-rs-parted"
keywords = ["competitive"]
categories = ["algorithms", "data-structures"]
publish = false

[lib]
name = "acl_scc"

[dependencies]
__acl_internal_scc = { package = "ac-library-rs-parted-internal-scc", version = "0.1.0", path = "../ac-library-rs-parted-internal-scc" }

[build-dependencies]
ac-library-rs-parted-build = { version = "0.0.0", path = "../ac-library-rs-parted-build" }
